# partitioned_pandas_compare

./: README.md  example.duckdb  pyproject.toml  setup.cfg  setup.py
partitioned_pandas_compare/: assets.py  definitions.py
partitioned_pandas_compare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
partitioned_pandas_compare/data/: data_2024-11-12.csv  data_2024-11-13.csv  data_2024-11-14.csv  data_2024-11-15.csv
