[project]
name = "partitioned_pandas_compare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-pandas",
        "pandas",
        "dagster-duckdb-pandas"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "partitioned_pandas_compare.definitions"
code_location_name = "partitioned_pandas_compare"
